[package]
name = "aoe-djin"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/scout-gg/djin"
description="""
Djin is a utility crate to extract Age of Empire II Definitive edition game data.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "^0"
flate2 = "^1"
bytes = "^1"
protocol = { git = "https://github.com/oknozor/protocol", branch = "feat/length-pointer" }
protocol-derive = { git = "https://github.com/oknozor/protocol", branch = "feat/length-pointer" }

[dev-dependencies]
spectral = "0.6.0"